--- a/index.html
+++ b/index.html
@@ -238,24 +238,24 @@
    			<h1 style="text-align:center; color:white">Flight Route Map across USA</h1>
 
 			<div class="lead" style="color:white">
-				<p>In 2015, all 12 US airlines carried out a total of 5.8 million flights between 628 airports. Chicago ranked No.1 among cities  and Southwest ranked No.1 among airlines. The current map below shows all flights from Chicago with Southwest Airline.</p>
-				<div>Choose <b style="color:yellow">Departure City or Airline</b> on the <b style="color:yellow">right dropdown filters</b> and interact with the map!
+				<p class="lead" style="color:white">In 2015, all 12 US airlines carried out a total of 5.8 million flights between 628 airports. Chicago ranked No.1 among cities  and Southwest ranked No.1 among airlines. The current map below shows all flights from Chicago with Southwest Airline.</p>
+				<p class="lead" style="color:white;margin-bottom: 0">Choose <b class="lead" style="color:yellow">Departure City or Airline</b> on the <b style="color:yellow">right dropdown filters</b> and interact with the map!
 				<ul>
-				<li>By choosing a city, the map shows flights departing from that city, and you can futher filter those flights by airlines. </li>
-				<li>By choosing an airline and choosing 'All' for cities, you can view all flights for the airline and know its hubs.</li>
+				<li class="lead" style="color:white">By choosing a city, the map shows flights departing from that city, and you can futher filter those flights by airlines. </li>
+				<li class="lead" style="color:white">By choosing an airline and choosing 'All' for cities, you can view all flights for the airline and know its hubs.</li>
 				</ul>
-				</div>
+				</p>
 			</div>
    		</div>   		
 		 <div style="width:950; margin:0 13%">
 		<div class='tableauPlaceholder' id='viz1556490380812' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;fl&#47;flightRoutesMap-InfoViz247&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='flightRoutesMap-InfoViz247&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;fl&#47;flightRoutesMap-InfoViz247&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1556490380812');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='950px';vizElement.style.height='627px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 		</div>
 	</div>
-		<div style="width:80%; margin:30px 15%; text-align: justify;">
+		<div style="width:80%; margin:30px 10%; text-align: justify;">
    			<h1 style="text-align:center; color:black">Compare traffic every 10 minutes between Cities and Airlines</h1>
-			<div class="lead" style="color:black">
-				<p>Now let’s get to a finer granularity. In 2015, there were 113 flights taking off every 10 minutes and the peak happened between 06:00 and 06:10 with nearly 360 flights.  </p>
-				<p >In below chart, choose one <b>dimension</b> to compare traffic between <b>two</b> airports or airlines<br></p>
+			<div>
+				<p class="lead" style="color:black">Now let’s get to a finer granularity. In 2015, there were 113 flights taking off every 10 minutes and the peak happened between 06:00 and 06:10 with nearly 360 flights.  </p>
+				<p class="lead" style="color:black">In below chart, choose one <b>dimension</b> to compare traffic between <b>two</b> airports or airlines<br></p>
 			</div>			
    		</div>   	
 		<div style="height:10px"></div>
@@ -326,7 +326,7 @@
     <div style="text-align: center;padding-top: 40px; padding-bottom: 0px;background-color:black; ">
       <div style="width:80%; margin:0 auto; color:white">
 		<h1 style="text-align: center;color:white">Flight delays over a year of each airline</h1>
-		<p style="text-align:left"> In general, all airlines witness heavy delays during first weeks of January and last weeks of December , and the least delays at end of April to May. Click on the <b style="color:yellow">start</b> button to view delay information for each airline. The circle size represents their flight traffic for that day. You can <b style="color:yellow">mouseover the date</b> to move forward and backwards through time.
+		<p class="lead" style="text-align:left;color:white"> In general, all airlines witness heavy delays during first weeks of January and last weeks of December , and the least delays at end of April to May. Click on the <b style="color:yellow">start</b> button to view delay information for each airline. The circle size represents their flight traffic for that day. You can <b style="color:yellow">mouseover the date</b> to move forward and backwards through time.
 		</p>
         <button onclick="start()" id="start_button">start</button>
       </div>
