--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 			<div>
 				<p style="color:white;font-family: 'Poppins', sans-serif;">In 2015, all 12 US airlines carried out a total of 5.8 million flights between 628 airports. Chicago ranked No.1 among cities  and Southwest ranked No.1 among airlines. The current map below shows all flights from Chicago with Southwest Airline.</p>
-				<p style="color:white;margin-bottom: 0;font-family: 'Poppins', sans-serif;">Choose <b class="lead" style="color:yellow">Departure City or Airline</b> on the <b style="color:yellow">right dropdown filters</b> and interact with the map!
+				<p style="color:white;margin-bottom: 0;font-family: 'Poppins', sans-serif;">Choose <b class="lead" style="color:#FFCF54">Departure City or Airline</b> on the <b style="color:#FFCF54">right dropdown filters</b> and interact with the map!
 				<ul>
 				<li style="color:white;font-family: 'Poppins', sans-serif;">By choosing a city, the map shows flights departing from that city, and you can futher filter those flights by airlines. </li>
 				<li style="color:white;font-family: 'Poppins', sans-serif;">By choosing an airline and choosing 'All' for cities, you can view all flights for the airline and know its hubs.</li>
@@ -333,7 +333,7 @@
     <div style="text-align: center;padding-top: 40px; padding-bottom: 0px;background-color:black; ">
       <div style="width:80%; margin:0 auto; color:white">
 		<h1 style="text-align: center;color:white;font-family: 'Poppins', sans-serif;">Flight delays over a year of each airline</h1>
-		<p style="text-align:left;color:white;font-family: 'Poppins', sans-serif;"> In general, all airlines witness heavy delays during first weeks of January and last weeks of December , and the least delays at end of April to May. Click on the <b style="color:yellow">start</b> button to view delay information for each airline. The circle size represents their flight traffic for that day. You can <b style="color:yellow">mouseover the date</b> to move forward and backwards through time.
+		<p style="text-align:left;color:white;font-family: 'Poppins', sans-serif;"> In general, all airlines witness heavy delays during first weeks of January and last weeks of December , and the least delays at end of April to May. Click on the <b style="color:#FFCF54">start</b> button to view delay information for each airline. The circle size represents their flight traffic for that day. You can <b style="color:#FFCF54">mouseover the date</b> to move forward and backwards through time.
 		</p>
         <button onclick="start()" id="start_button">start</button>
       </div>
