--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	   			<h5  style="text-align: left; color:#FFD700;font-family: 'Poppins', sans-serif;">Welcome to OmniFlight.</h5>
 	   			<h1 style="text-align: left;font-family: 'Poppins', sans-serif;">Understand Flight Traffic and Delays in the US.</h1>
 
-	   			<a class="button stroke smoothscroll" href="#reason" title="" style="margin-left: -55%">Start the journey</a>
+	   			<a class="button stroke smoothscroll" href="#reason" title="" style="margin-left: -55%;font-family: 'Poppins', sans-serif;">Start the journey</a>
 
 	   		</div>  
    			
@@ -207,15 +207,15 @@
 
    </section> <!-- /intro -->
 
-   <section id="reason" style="background-color: white;height:700px">  
+   <section id="reason" style="background-color: white;height:650px">  
 
 	   	<div class="row section-intro" style="padding-top:130px" >
 	   		<div class="col-twelve with-bottom-line">
 
-	   			<h5>Background</h5>
+	   			<h5 style="color:black">Background</h5>
 	   		</div>
 	   	</div>
-   		<div style="background-color:#EAEAED; height:100%">
+   		<div style="background-color:white; height:100%">
    			<img src = "images/Group.png" style="width:24%; margin:3% 38%"></img>
 	   		<div style="width:80%; margin:0 10%; text-align: justify;" >
 
@@ -232,7 +232,7 @@
    	<div class="row section-intro">
    		<div class="col-twelve with-bottom-line">
 
-   			<h5>TRAFFIC</h5>
+   			<h5 style="color:black">TRAFFIC</h5>
    		</div>
    	</div>
    		<div style="text-align: center">
@@ -312,7 +312,7 @@
    	<div class="row section-intro">
    		<div class="col-twelve with-bottom-line">
 
-   			<h5 style="font-family: 'Poppins', sans-serif;">Delay in USA</h5>
+   			<h5 style="font-family: 'Poppins', sans-serif;color:black">Delay in USA</h5>
    		</div>
    	</div>
    			 <div style="text-align: center;">
@@ -375,7 +375,7 @@
 
    	<div class="row">
    		<div class="col-twelve">
-   			<h2 class="h01" style="font-family: 'Poppins', sans-serif;">Hear What Are Customers Say.</h2>
+   			<h2 class="h01" style="font-family: 'Poppins', sans-serif;color:black">Hear What Are Customers Say.</h2>
    		</div>   		
    	</div>   	
 
