--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
    			<img src = "images/Group.png" style="width:24%; margin:3% 38%"></img>
 	   		<div style="width:80%; margin:0 10%; text-align: justify;" >
 
-	   			<p style="width:60%; margin:2% 20%;font-family: 'Poppins', sans-serif;"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
+	   			<p style="width:60%; margin:2% 20%;font-family: 'Poppins', sans-serif;color:grey"> Have you ever wondered which of San Francisco or Los Angeles is a busier airport? Or Have you experienced significant flight delay that made you miss important events? Understanding the curiosity of aviation fans and pain points of frequent flyers who are sensitive to flight delay, we want to create this interactive website for them to make better flight choices to know about flight traffic and avoid flight delay as much as possible. </p>
 	   		</div>
    		</div>
    </section>
