--- a/index.html
+++ b/index.html
@@ -268,15 +268,15 @@
 		<div style="height:10px"></div>
 		<div style="text-align: center">
 				<p> <b style="color: black;font-family: 'Poppins', sans-serif;">Dimension:</b>&nbsp
-				<button id="airlineBtn" onclick="selectAirline()" class="button">
+				<button id="airlineBtn" onclick="selectAirline()" class="button" style="font-family: 'Poppins', sans-serif;">
 					Airline
 				</button>
 				&nbsp&nbsp
-				<button id="cityBtn" onclick="selectCity()" class="button">
+				<button id="cityBtn" onclick="selectCity()" class="button" style="font-family: 'Poppins', sans-serif;">
 					City
 				</button>
 				&nbsp&nbsp
-				<button id="bothBtn" onclick="selectBoth()" class="button">
+				<button id="bothBtn" onclick="selectBoth()" class="button" style="font-family: 'Poppins', sans-serif;">
 					Tiered
 				</button>
 				</p>
@@ -375,7 +375,7 @@
 
    	<div class="row">
    		<div class="col-twelve">
-   			<h2 class="h01" style="font-family: 'Poppins', sans-serif;color:black">Hear What Are Customers Say.</h2>
+   			<h2 class="h01" style="font-family: 'Poppins', sans-serif;color:black">Hear What Our Customers Say</h2>
    		</div>   		
    	</div>   	
 
