--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
    	<div class="row section-intro">
    		<div class="col-twelve with-bottom-line">
 
-   			<h5 style="font-family: 'Poppins', sans-serif;color:black">Delay in USA</h5>
+   			<h5 style="color:black">Delay in USA</h5>
    		</div>
    	</div>
    			 <div style="text-align: center;">
@@ -373,11 +373,12 @@
    ================================================== -->
    <section id="testimonials">
 
-   	<div class="row">
-   		<div class="col-twelve">
-   			<h2 class="h01" style="font-family: 'Poppins', sans-serif;color:black">Hear What Our Customers Say</h2>
-   		</div>   		
-   	</div>   	
+   	<div class="row section-intro">
+   		<div class="col-twelve with-bottom-line">
+
+   			<h5 style="color:black">Hear What Our Customers Say</h5>
+   		</div>
+   	</div> 	
 
       <div class="row flex-container">
     
